# ml_ops_dog_breeds

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  models.dvc  pyproject.toml  requirements.txt  requirements_api.txt  requirements_dev.txt  requirements_tests.txt
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
data/: .gitignore  raw.dvc
dockerfiles/: api.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
ml_ops_dog_breeds/: __init__.py  config.yaml  predict_model.py  torchserve_handler.py  train_model.py
ml_ops_dog_breeds/api/app/: main.py
ml_ops_dog_breeds/data/: config.yaml  dataset.py  make_dataset.py
ml_ops_dog_breeds/models/: config.yaml  model.py
ml_ops_dog_breeds/models/other_models/: model_lsce.py
reports/: README.md  report.py
reports/figures/: Architecture.pptx
tests/: CHECKLIST.md  __init__.py  test_data.py  test_model.py  test_training.py
